crates/thndrs/src/cli/renderer/live/snapshots/thndrs_lib__cli__renderer__live__tests__prompt_long_word.snap
---
source: crates/thndrs/src/cli/renderer/live/tests.rs
expression: combined
---
width=80:
│     ❯  aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa    # [bg=#171928]=   [bg=#171928]=   [fg=#f1fc79 bg=#171928]=❯ [bg=#171928]=   [fg=#ebfafa bg=#171928]=aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa [bg=#171928]=  
│        aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa                          # [bg=#171928]=   [bg=#171928]=      [fg=#ebfafa bg=#171928]=aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa [bg=#171928]=                       [bg=#171928]=  
width=40:
│     ❯  aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa    # [bg=#171928]=   [bg=#171928]=   [fg=#f1fc79 bg=#171928]=❯ [bg=#171928]=   [fg=#ebfafa bg=#171928]=aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa [bg=#171928]=  
│        aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa    # [bg=#171928]=   [bg=#171928]=      [fg=#ebfafa bg=#171928]=aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa [bg=#171928]=  
│        aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa    # [bg=#171928]=   [bg=#171928]=      [fg=#ebfafa bg=#171928]=aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa [bg=#171928]=  
│        aaaaaaaaaaaaaaaaaaaaaaaaaaa        # [bg=#171928]=   [bg=#171928]=      [fg=#ebfafa bg=#171928]=aaaaaaaaaaaaaaaaaaaaaaaaaaa [bg=#171928]=     [bg=#171928]=
