crates/thndrs/src/cli/renderer/live/snapshots/thndrs_lib__cli__renderer__live__tests__prompt_zero_width.snap
---
source: crates/thndrs/src/cli/renderer/live/tests.rs
expression: combined
---
width=80:
│   │ ❯  a​b‍c                                                                   │    # [bg=#171928]=   [fg=#3b4261 bg=#171928]=│ [bg=#171928]=  [fg=#f1fc79 bg=#171928]=❯ [bg=#171928]=   [fg=#ebfafa bg=#171928]=a​b‍c [bg=#171928]=                                                                    [fg=#3b4261 bg=#171928]=│ [bg=#171928]=  
width=40:
│   │ ❯  a​b‍c                           │    # [bg=#171928]=   [fg=#3b4261 bg=#171928]=│ [bg=#171928]=  [fg=#f1fc79 bg=#171928]=❯ [bg=#171928]=   [fg=#ebfafa bg=#171928]=a​b‍c [bg=#171928]=                            [fg=#3b4261 bg=#171928]=│ [bg=#171928]=
